# starrocks-dagster-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MULTI_CATALOG_DEMO.md  README.md  SETUP_COMPLETE.md  create_catalogs.sh  demo_queries.md  docker-compose.yml  multi_catalog_setup.sql  pyproject.toml  reset_demo.sh  run_demo.sh  setup_delta_table.py  showcase_connectors.sh  showcase_connectors.sql  stage1_weather_data.sh  stage2_hive_catalog.sh  stage3_postgres_catalog.sh  stage4_ai_pipeline.sh  stage5_multi_catalog.sh  test_multi_catalog.sh
dagster/: Dockerfile  README.md  STRUCTURE.md  dagster.yaml  pyproject.toml  workspace.yaml
dagster/energy_trading/: __init__.py  config.py  utils.py
dagster/energy_trading/assets/: __init__.py  delta_external_catalog.py  multi_catalog_analytics.py  postgres_external_catalog.py  trading_decision.py  trained_model.py  wearther_data.py  weather_data.py
data_generator/: Dockerfile  generate_data.py  pyproject.toml
metastore/: Dockerfile  core-site.xml  docker-entrypoint.sh  hive-site.xml
