[project]
name = "energy-trading-dagster"
version = "0.1.0"
description = "Energy trading ETL pipeline with Dagster"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagstermill",
    "pandas",
    "numpy",
    "scikit-learn",
    "deltalake",
    "azure-storage-blob",
    "azure-identity",
    "pymysql",
    "hmsclient",
    "ollama",
    "requests",
    "python-dotenv",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["energy_trading"]
